[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/PMingLiU.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Image/dao/fuxi.png" type="Texture" id=2]
[ext_resource path="res://scences/time/time.gd" type="Script" id=3]
[ext_resource path="res://scences/text_edit/Button_1.tres" type="Theme" id=4]
[ext_resource path="res://scences/time/Pause.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="time" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 49.0
margin_top = 84.0
margin_right = 304.0
margin_bottom = 263.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fuxi" type="Sprite" parent="ColorRect"]
show_behind_parent = true
position = Vector2( 125.002, 49.2321 )
rotation = 3.14159
scale = Vector2( 0.246131, 0.246131 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 255.0
margin_bottom = 21.0

[node name="time" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "时间"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shichen" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "时辰"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="season" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 29.0
margin_right = 255.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "季节"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="temp" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 58.0
margin_right = 255.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "温度"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weather" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 87.0
margin_right = 255.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "气候"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wuxing" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 116.0
margin_right = 255.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 1 )
text = "五行"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_box_speed" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 145.0
margin_right = 255.0
margin_bottom = 162.0

[node name="nomal" type="Button" parent="ColorRect/VBoxContainer/h_box_speed"]
margin_right = 64.0
margin_bottom = 17.0
theme = ExtResource( 4 )
text = "正常速度"

[node name="60speed" type="Button" parent="ColorRect/VBoxContainer/h_box_speed"]
margin_left = 72.0
margin_right = 136.0
margin_bottom = 17.0
theme = ExtResource( 4 )
text = "60倍速度"

[node name="pause" type="Button" parent="ColorRect/VBoxContainer/h_box_speed"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 17.0
theme = ExtResource( 4 )
text = "暂停"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.419608, 0.419608, 0.419608, 0.592157 )
[connection signal="pressed" from="ColorRect/VBoxContainer/h_box_speed/nomal" to="." method="_on_nomal_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/h_box_speed/60speed" to="." method="_on_60speed_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/h_box_speed/pause" to="." method="_on_pause_pressed"]
